<resources>
    <string name="app_name"></string>
    <string name="app_title">AppName</string>
    <string name="items">Button</string>
    <string name="settings">set</string>
    <string name="add">add note</string>
    <string name="remove">remove note</string>
    <string name="read_notes_history">notes history</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_note_description">Enter a description</string>
    <string name="create_note_title">I\'m title</string>
    <string name="create_note_save_button">save</string>
    <string name="home_menu">home</string>
    <string name="favourites_menu">favourites</string>
    <string name="settings_menu">settings</string>
    <string name="edit_note_popup_menu">Edit</string>
    <string name="remove_note_popup_menu">Remove</string>
    <string name="category_day_note_title">Day note</string>
    <string name="btn_add_poduct_list">add</string>
    <string name="category_temporary_title">Temporary</string>
</resources>